--- a/a.html
+++ b/a.html
@@ -63,7 +63,7 @@
     // -----------------------------
     // ملاحظة: اترك API_KEY فارغ أو ضع مفتاح للاختبار المحلي فقط.
     // الأفضل أن لا تضع مفتاحًا في الكود على بيئة الإنتاج.
-    const API_KEY = ""; // <-- ضع مفتاحك هنا فقط للاختبار المحلي إن أردت
+    const API_KEY = "668|2tCCuCfVjNYjvFVDlTRnaFdnHZFVte8dh2TtBn3J0bce26bf"; // <-- ضع مفتاحك هنا فقط للاختبار المحلي إن أردت
 
     // افتراض مسارات send/verify — عدّل إذا كان في حسابك مسار مختلف.
     const SEND_OTP_URL = `https://app.hypersender.com/instances/${INSTANCE_ID}/send-otp`;
