--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>سياسة الخصوصية — راحه للتوصيل / Rahad Delivery</title>
+  <title> سياسة الخصوصية — راحه توصيل الطلبات وكل شي  / Rahad Comfort food delivery service and everything</title>
   <style>
     :root{--bg:#f8fafc;--card:#ffffff;--accent:#0b74da;--muted:#6b7280}
     body{font-family:Tahoma, Arial, Helvetica, sans-serif;background:var(--bg);margin:0;padding:24px;color:#0f172a}
@@ -27,15 +27,15 @@
     <header>
       <div class="logo">R</div>
       <div>
-        <h1>سياسة الخصوصية — راحه للتوصيل</h1>
-        <p class="lead">Rahad Delivery — سياسة الخصوصية لتطبيق توصيل الطلبات</p>
+        <h1>سياسة الخصوصية — راحه توصيل الطلبات وكل شي</h1>
+        <p class="lead">Rahad Comfort food delivery service and everything — سياسة الخصوصية لتطبيق توصيل الطلبات وكل شي</p>
         <div class="meta">تاريخ السريان: <strong>2026-09-23</strong></div>
       </div>
     </header>
 
     <article class="card">
       <h2>مقدمة</h2>
-      <p>تطبيق <strong>راحه للتوصيل</strong> (بالإنجليزية: <strong>Rahad Delivery</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة ahmedengnerr@gmail.com ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
+      <p>تطبيق <strong>راحه توصيل الطلبات وكل شي</strong> (بالإنجليزية: <strong>Rahad Comfort food delivery service and everything</strong>) هو تطبيق مخصص لتوصيل الطلبات (طعام، منتجات، مستلزمات). تم تطوير التطبيق بواسطة ahmedengnerr@gmail.com ويُقدَّم كخدمة تجارية. باستخدامك للتطبيق، فإنك توافق على شروط سياسة الخصوصية هذه.</p>
 
       <h2>1. جمع المعلومات واستخدامها</h2>
       <p>يجمع التطبيق بيانات معينة عند تنزيله واستخدامه، ومنها:</p>
